[package]
name = "dbgsrvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
]
